--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,4 +8,5 @@ pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
+jinja2==3.1.2
 alembic==1.13.1
