--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,5 +9,6 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 jinja2==3.1.2
+httpx==0.26.0
 alembic==1.13.1
 email-validator==2.1.0
